# webhamshack

./: CMakeLists.txt  build.sh  main.cpp  rig.json
cmake/Modules/: Findhamlib.cmake  LibFindMacros.cmake
include/: controller.h  rigctrl.h  util.h
src/: controller.cpp  rigctrl.cpp  util.cpp
